Add jvm option for concurrent mark sweep in readme